# GuideTypes

./: .gitignore  LICENSE  Makefile  README.md  Vagrantfile  anf.ml  anf.mli  ast_ops.ml  ast_ops.mli  ast_types.ml  comminfer.ml  compile.ml  compile.mli  dist.ml  dist.mli  dune  dune-project  eval.ml  eval.mli  infer_ops.ml  infer_types.ml  ir_types.ml  lexer.mll  libdist.ml  libdist.mli  libtensor.ml  libtensor.mli  parse.ml  parse.mli  parser.mly  tensor.ml  tensor.mli  tensor_ext.ml  tensor_ext.mli  timer.ml  torch_ext.cc  torch_ext.h  torch_ext.ml  trace_ops.ml  trace_types.ml  (+6 more)
bench/: branching_handwritten.py  branching_test.py.example  dune  ex_1_handwritten.py  ex_1_test.py.example  expressiveness-of-compared-work.md  gmm_handwritten.py  gmm_test.py.example  reproduce_table-1.py  reproduce_table-2.py  vae_handwritten.py  vae_test.py.example  weight_handwritten.py  weight_test.py.example
bench/anglican/: aircraft  branching  branching-aistats  branching-proposal  drill-or-not-with-sounding  gaussian  gda-trainer  gmm  gmm-proposal  hmm  infer-drift  kalman  kalman-chaos-opt  learn-gbm  linear-regression  marsaglia-normal  meet-by-chance  poisson-trace  run-pencil-factory  scientists  sprinkler-bayes-net  user-behavior-generative
bench/pyro/: example  vae  vae-guide  vae-model  weight  weight-guide  weight-model  weight.in
bench/results/: branching_test.py  ex_1_test.py  gmm_test.py  vae_test.py  weight_test.py
bench/tests/: example-1  example-1-guide  example-1-model  example-1-proposal  example-1.in  example-2  pcfg-model  recursive  (+2 more)
config/: discover.ml
