(ocamllex lexer)
(menhir (flags --table) (modules parser))

(executable
  (name comminfer)
  (foreign_stubs (language cxx) (names torch_ext) (flags -std=c++14 -fPIC -I/Users/di/.opam/system/lib/libtorch/include))
  (libraries core compiler-libs.common menhirLib torch ctypes.foreign pyml tqdm)
  (preprocess (pps ppx_jane)))
