(ocamllex lexer)
(menhir (flags --table) (modules parser))

(executable
  (name comminfer)
  (libraries core compiler-libs.common menhirLib ctypes ctypes.foreign torch torch.core pyml tqdm)
  (preprocess (pps ppx_jane))
  (foreign_stubs (language cxx) (names torch_ext) (flags -std=c++14 -fPIC -I/Users/di/.opam/system/lib/libtorch/include)))
