(ocamllex lexer)
(menhir (flags --table) (modules parser))

(executable
  (name comminfer)
  (libraries core compiler-libs.common menhirLib ctypes ctypes.foreign torch torch.core pyml tqdm)
  (preprocess (pps ppx_jane))
  (foreign_stubs (language cxx) (names torch_ext) (flags -std=c++14 -fPIC (:include cxx_flags.sexp)))
  (flags (:standard -w -7)))

(rule
  (targets cxx_flags.sexp)
  (action (run ./config/discover.exe)))
